# DeeBee

./: CHANGELOG.md  README.md  changelog.md  dictionary.py  keep_alive-.py  keep_alive.py  main.py  oauth2_log.debug  pyproject.toml  requirements.txt  simple_rng.py  test.py  test.txt  totp.py  vt_handler.py  weather.py
older version/deebee-bot/: main.py.bak-v0.1  main.py.bak-v0.2_01  main.py.bak-v0.2_02  main.py.bak-v0.2_03  main.py.bak-v0.3  main.py.bak-v0.4  main.py.bak-v1.1
older version/weather/: weather.py.bak-v0.1
weather/: filenames.txt  irgmsw.cfg
