[tool.poetry]
name = "deebee"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
crontab = "^0.23.0"
goslate = "^1.5.1"
bs4 = "^0.0.1"
click = "^7.1.2"
pytz = "^2021.1"
flask-simplelogin = "^0.0.7"
wget = "^3.2"
discord-py-interactions = "^3.0.2"
vt-py = "^0.7.2"
virustotal3 = "^1.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
