[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Andrew Barrientos <itsmedidot@gmail.com>"]
description = ""
name = "deebee"
version = "0.1.0"
[tool.poetry.dependencies]
bs4 = "^0.0.1"
click = "^7.1.2"
crontab = "^0.23.0"
discord = "^1.0.1"
discord-together = "^1.2.3"
flask = "^1.1.2"
flask-simplelogin = "^0.0.7"
goslate = "^1.5.1"
python = "^3.8"
pytz = "^2021.1"
virustotal3 = "^1.0.8"
vt-py = "^0.7.2"
wget = "^3.2"
[tool.poetry.dev-dependencies]
